wording: FrosCon -> FrOSCon

--- a/appinfo.json
+++ b/appinfo.json
@@ -4,7 +4,7 @@
     "vendor": "R. Kowalski",
     "type": "web",
     "main": "index.html",
-    "title": "Froscon 2011 HD",
+    "title": "FrOSCon 2011 HD",
     "icon": "55x55.png",
     "uiRevision":2,
     "keywords": ["Froscon", "Timetable", "Conference"],
